--- a/Proyecto_1_Diseno/templates/rutas.html
+++ b/Proyecto_1_Diseno/templates/rutas.html
@@ -419,7 +419,7 @@ textarea.form-input {
 </div>
 
 <!-- Modal de pantalla completa -->
-<div id="rutaModal" class="modal">
+<div id="rutaModal" class="modal"  style="display: none;">
   <div class="modal-header">
     <h3 id="modalTitle">Crear Nueva Ruta</h3>
     <button class="modal-close" id="closeRutaModal">&times;</button>
