Update stylesheet link in rutas.html to use rutas.css

--- a/Proyecto_1_Diseno/templates/rutas.html
+++ b/Proyecto_1_Diseno/templates/rutas.html
@@ -4,7 +4,7 @@
 {% block title %}Gestión de Rutas{% endblock %}
 
 {% block page_css %}
-<link rel="stylesheet" href="{{ get_static_path('css/rutas-simple.css') }}" />
+<link rel="stylesheet" href="{{ get_static_path('css/rutas.css') }}" />
 {% endblock %}
 
 {% block page_name %}Gestión de Rutas Preestablecidas{% endblock %}
