--- a/Proyecto_1_Diseno/templates/_base.html
+++ b/Proyecto_1_Diseno/templates/_base.html
@@ -133,6 +133,28 @@
             </span>
             Rutas
           </a>
+          <a
+            id="mapaLink"
+            class="sidebar-link {% if 'mapa' in request.path %}active{% endif %}"
+            href="{{ get_base_path() }}/mapa/"
+          >
+            <span class="link-icon">
+              <svg
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z"></path>
+                <circle cx="12" cy="9" r="2.5"></circle>
+              </svg>
+            </span>
+            Mapa
+          </a>
         </div>
 
         <div id="navigationSidebar" class="sidebar-section">
